@@ -1,3 +1,7 @@
+Wed Jul 19 15:59:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added get_description to Java OmMSet wrapper.
+
 Wed Jul 19 11:17:00 BST 2000 Olly Betts
 
 	* backends/sleepy/dir_contents: updated information about sleepycat
